--- a/source/_posts/钢筋扫描.md
+++ b/source/_posts/钢筋扫描.md
@@ -3,8 +3,8 @@ title: 钢筋扫描
 date: 2020-11-25 18:28:43
 background: bg-gradient-to-l from-green-400 to-blue-500 hover:from-blue-500 hover:to-green-400
 tags:
-    - guide
-    - reference
+    - 无损检测
+    - 实体检测
 categories:
     - 常规检测
 intro: 包含桥梁、建筑等多种常用规范的介绍。
@@ -59,7 +59,7 @@ plugins:
 
 ### GB 50010-2010 {.col-span-3}
 
-#### 混凝土结构设计规范
+#### 《混凝土结构设计规范》
 
 - 2.1.18 混凝土保护层：结构构件中钢筋**外边缘**至**构件表面**范围用于保护钢筋的混凝土，简称保护层。
 
@@ -118,55 +118,48 @@ plugins:
 检测频率
 ---
 
+### JGJ/T 152-2019
 
-### GB 50204-2015{.row-span-3}
+#### 《混凝土中钢筋检测技术标准》
 
-#### 《混凝土结构工程施工质量验收规范》
+4.2.1 对混凝土结构进行工程质量检测时
 
-**构件数量：**
+- 混凝土保护层厚度检测抽样应符合现行国家标准《混凝土结构工程施工质量验收规范》GB50204的规定。
 
-E.0.1 结构实体钢筋保护层厚度检验构件的选取应均匀分布，并应符合下列规定：
-- 对**非悬挑梁板**类构件，应各抽取构件数量的**2%且不少于5个**构件进行检验。
-- 对**悬挑梁**，应抽取构件数量的**5%且不少于10个**构件进行检验；当悬挑梁数量少于10个时，应全数检验。
-- 对**悬挑板**，应抽取构件数量的**10%且不少于20个**构件进行检验；当悬挑板数量少于20个时，应全数检验。
-{.marker-timeline}
+4.2.2 对混凝土结构进行结构性能检测时
 
-**钢筋数量：**
-
-E.0.2
-- 对选定的**梁**类构件，应对**全部纵向**受力钢筋的保护层厚度进行检验。
-- 对选定的**板**类构件，应抽取不少于**6根纵向**受力钢筋的保护层厚度进行检验。
-- 对每根钢筋，应选择有代表性的不同部位量**测3点取平均值**。
-{.marker-timeline}
+- 混凝土保护层厚度及钢筋间距的抽样可按现行国家标准《建筑结构检测技术标准》GB/T50344或《混凝土结构现场检测技术标准》GB/T50784的有关规定进行。
+- 当委托方有明确要求时，应按相关要求确定。
 
 ### GB/T 50784-2013{.row-span-3}
 
 #### 《混凝土结构现场检测技术标准》
 
-![image-20240327094732346](https://img.101jc.com/img/image-20240327094732346.png!yasuo70)
+**钢筋数量和间距：**
 
-**梁柱主筋**：
+![image-20240327094732346](https://img.101jc.com/img/image-20240327094732346.png!yasuo70)
 
 9.2.3 检测梁、柱类构件主筋数量和间距时应符合下列规定：
 
 - 测试部位应避开其他金属材料和较强的铁磁性材料，表面应清洁、平整；
 - 应将构件测试面一侧所有主筋逐一检出，并在构件表面标注出每个检出钢筋的相应位置；
 - 应测量和记录每个检出钢筋的相对位置。
-{.marker-timeline}
-
-**墙板钢筋**：
+  {.marker-timeline}
 
 9.2.4 检测墙、板类构件钢筋数量和间距时应符合下列规定：
+
 - 在构件上随机选择测试部位，测试部位应避开其他金属材料和较强的铁磁性材料，表面应清洁、平整；
 - 在每个测试部位连续检出7根钢筋，少于7根钢筋时应全部检出，并宜在构件表面标注出每个检出钢筋的相应位置；
 - 应测量和记录每个检出钢筋的相对位置；
 - 可根据第一根钢筋和最后一根钢筋的位置，确定这两个钢筋的距离，计算出钢筋的平均间距；
 - 必要时应计算钢筋的数量。
-{.marker-timeline}
-
-**梁柱箍筋**：
+  {.marker-timeline}
 
 9.2.5 梁、柱类构件的箍筋可按本标准第9.2.4条检测，当存在箍筋加密区时，宜将加密区内箍筋全部测出。
+
+**保护层厚度：**
+
+9.3.4 工程质量检测时，混凝土保护层厚度的抽检数量及合格判定规则，宜按现行国家标准《混凝土结构工程施工质量验收规范》**GB50204**的有关规定执行。
 
 ### JTG/T J21-2011
 
@@ -179,6 +172,28 @@ E.0.2
 - 发生钢筋锈蚀胀裂的部位；
 - 布置混凝土碳化测区的部位。
 {.marker-timeline}
+
+### GB 50204-2015{.row-span-2}
+
+#### 《混凝土结构工程施工质量验收规范》
+
+**构件数量：**
+
+E.0.1 结构实体钢筋保护层厚度检验构件的选取应均匀分布，并应符合下列规定：
+
+- 对**非悬挑梁板**类构件，应各抽取构件数量的**2%且不少于5个**构件进行检验。
+- 对**悬挑梁**，应抽取构件数量的**5%且不少于10个**构件进行检验；当悬挑梁数量少于10个时，应全数检验。
+- 对**悬挑板**，应抽取构件数量的**10%且不少于20个**构件进行检验；当悬挑板数量少于20个时，应全数检验。
+  {.marker-timeline}
+
+**钢筋数量：**
+
+E.0.2
+
+- 对选定的**梁**类构件，应对**全部纵向**受力钢筋的保护层厚度进行检验。
+- 对选定的**板**类构件，应抽取不少于**6根纵向**受力钢筋的保护层厚度进行检验。
+- 对每根钢筋，应选择有代表性的不同部位量**测3点取平均值**。
+  {.marker-timeline}
 
 ### JTG/T 5214—2022
 
@@ -210,3 +225,115 @@ E.0.2
 {.marker-timeline}
 
 4.6.12-2 钢筋位置和钢筋保护层厚度的检测，应按国家现行标准《混凝土结构现场检测技术标准》**GB/T 50784**和《混凝土中钢筋检测技术规程》**JGJ/T 152**的规定执行。
+
+
+
+结果判定
+---
+
+### GB/T 50784-2013{.col-span-2 .row-span-2}
+
+#### 《混凝土结构现场检测技术标准》
+
+**钢筋数量和间距：**
+
+9.2.6 单个构件的符合性判定应符合下列规定：
+
+- 梁、柱类构件主筋实测根数少于设计根数时，该构件配筋应判定为不符合设计要求；
+
+- 梁、柱类构件主筋的平均间距与设计要求的偏差大于相关标准规定的允许偏差时，该构件配筋应判定为不符合设计要求；
+
+- 墙、板类构件钢筋的平均间距与设计要求的偏差大于相关标准规定的允许偏差时，该构件配筋应判定为不符合设计要求；
+
+- 梁、柱类构件的箍筋可按墙、板类构件钢筋进行判定。
+
+  {.marker-timeline}
+
+9.2.7 批量检测钢筋数量和间距时应符合下列规定：
+
+- 将设计文件中钢筋配置要求相同的构件作为一个检验批；
+- 按本标准表3.4.4的规定确定抽检构件的数量；
+- 随机选取受检构件；
+- 按本标准第9.2.3条或第9.2.4条的方法对单个构件进行检测；
+- 按本标准第9.2.6条对受检构件逐一进行符合性判定。
+  {.marker-timeline}
+
+9.2.8 对检验批符合性判定应符合下列规定：
+
+- 根据检验批中受检构件的数量和其中不符合构件的数量应按本标准表3.4.5-1进行检验批符合性判定；![image-20240330075341805](https://img.101jc.com/img/image-20240330075341805.png!yasuo70)
+
+- 对于梁、柱类构件，检验批中一个构件的主筋实测根数少于设计根数，该批应直接判为不符合设计要求；
+
+- 对于墙、板类构件，当出现受检构件的钢筋间距偏差大于偏差允许值1.5倍时，该批应直接判为不符合设计要求；
+
+- 对于判定为符合设计要求的检验批，可建议采用设计的钢筋数量和间距进行结构性能评定；对于判定为不符合设计要求的检验批，宜细分检验批后重新检测或进行全数检测。当不能进行重新检测或全数检测时，可建议采用最不利检测值进行结构性能评定。
+
+  {.marker-timeline}
+
+**保护层厚度：**
+
+9.3.4 工程质量检测时，混凝土保护层厚度的抽检数量及合格判定规则，宜按现行国家标准《混凝土结构工程施工质量验收规范》**GB50204**的有关规定执行。
+
+9.3.5 结构性能检测时，检验批混凝土保护层厚度检测应符合下列规定：
+
+- 应将设计要求的混凝土保护层厚度相同的同类构件作为一个检验批，按本标准表3.4.4中A类确定受检构件的数量；
+
+- 随机抽取构件，对于梁、柱类应对全部纵向受力钢筋混凝土保护层厚度进行检测；对于墙、板类应抽取不少于6根钢筋（少于6根钢筋时应全检），进行混凝土保护层厚度检测；
+
+- 将各受检钢筋混凝土保护层厚度检测值按本标准第3.4.7条计算均值推定区间；
+
+- 当均值推定区间上限值与下限值的差值不大于其均值的10%时，该批钢筋混凝土保护层厚度检测值可按推定区间上限值或下限值确定；
+
+- 当均值推定区间上限值与下限值的差值大于其均值的10%时，宜补充检测或重新划分检验批进行检测。当不具备补充检测或重新检测条件时，应以最不利检测值作为该检验批混凝土保护层厚度检测值。
+
+  {.marker-timeline}
+
+### JGJ/T 152-2019{.row-span-1}
+
+#### 《混凝土中钢筋检测技术标准》
+
+![image-20240330083346753](https://img.101jc.com/img/image-20240330083346753.png!yasuo70)
+
+![image-20240330083447702](https://img.101jc.com/img/image-20240330083447702.png!yasuo70)
+
+4.7.4工程质量检测时
+
+- 混凝土保护层厚度的评定应符合设计及现行国家标准《混凝土结构工程施工质量验收规范》GB50204的有关规定。
+
+4.7.5对混凝土结构进行结构性能检测时
+
+- 混凝土保护层厚度、钢筋间距的结果评定应符合现行国家标准《建筑结构检测技术标准》GB/T50344或《混凝土结构现场检测技术标准》GB/T50784的规定。
+
+### GB 50204-2015{.row-span-1}
+
+#### 《混凝土结构工程施工质量验收规范》
+
+![image-20240330074334626](https://img.101jc.com/img/image-20240330074334626.png!yasuo70)
+
+E.0.5 梁类、板类构件纵向受力钢筋的保护层厚度应分别进行验收，并应符合下列规定：
+
+- 当全部钢筋保护层厚度检验的合格率为90%及以上时，可判为合格；
+
+- 当全部钢筋保护层厚度检验的合格率小于90%但不小于80%时，可再抽取相同数量的构件进行检验；当按两次抽样总和计算的合格率为90%及以上时，仍可判为合格；
+
+- 每次抽样检验结果中不合格点的最大偏差均不应大于本规范附录E.0.4条规定允许偏差的1.5倍。
+
+  {.marker-timeline}
+
+### JTG/T J21-2011
+
+#### 《公路桥梁承载能力检测评定规程》
+
+![image-20240330080822394](https://img.101jc.com/img/image-20240330080822394.png!yasuo70)
+
+### JTG/T 5214—2022
+
+#### 《在用公路桥梁现场检测技术规程》
+
+无相关规定。
+
+### CJJ/T 233-2015
+
+#### 《城市桥梁检测与评定技术规范》
+
+4.6.12-3 钢筋保护层最小厚度应符合设计要求及现行国家标准《混凝土结构耐久性设计规范》GB/T50476的规定；钢筋保护层厚度对结构钢筋耐久性的影响，可按现行行业标准《公路桥梁承载能力检测评定规程》JTG/TJ21进行评定。
