--- a/source/_posts/植筋拉拔.md
+++ b/source/_posts/植筋拉拔.md
@@ -21,7 +21,7 @@ plugins:
 
 适用于以钢筋混凝土、预应力混凝土以及素混凝土为基材的后锚固连接的设计、施工及验收；不适用于以砌体、轻骨料混凝土及特种混凝土为基材的后锚固连接。
 
-### GB 50203-2011{.col-span-2}
+### GB 50203-2011
 
 #### 《砌体结构工程施工质量验收规范》
 
@@ -135,7 +135,7 @@ C.4.3 进行破坏性检验时，施加荷载应符合下列规定：
 
 {.marker-timeline}
 
-### 结果判定{.col-span-2}
+### 结果判定{.row-span-1}
 
 #### 构造柱判定（JGJ 145- 2013）
 
