--- a/source/_posts/混凝土抗压强度.md
+++ b/source/_posts/混凝土抗压强度.md
@@ -384,7 +384,7 @@ plugins:
 
 {.marker-timeline}
 
-### 混凝土抗压强度现场检测方法{.col-span-2}
+### 混凝土抗压强度现场检测方法
 
 A.2.2 回弹法测区应符合下列规定：
 
@@ -487,7 +487,7 @@ D.0.1 回弹构件的抽取应符合下列规定：
 
 7.1.7 采用钻芯法对回弹法、超声-回弹综合法进行修正时，可按《混凝土结构现场检测技术标准》**GB/T 50784**附录C执行。
 
-### CJJ/T 233-2015{.col-span-3}
+### CJJ/T 233-2015
 
 #### 《城市桥梁检测与评定技术规范》
 
