迁移了图床

--- a/source/_posts/植筋拉拔.md
+++ b/source/_posts/植筋拉拔.md
@@ -94,7 +94,7 @@ C.2.3 现场非破损检验的抽样数量，应符合下列规定：
 
   1）对重要结构构件及生命线工程的非结构构件，应按表C.2.3规定的抽样数量对该检验批的锚栓进行检验；
 
-  ![image-20240401080213285](https://img.101jc.com/img/image-20240401080213285.png!yasuo70)
+  ![image-20240401080213285](https://img.101jc.com/img/image-20240401080213285.webp)
 
   2）对一般结构构件，应取重要结构构件抽样量的50%且不少于5件进行检验；
 
@@ -149,7 +149,7 @@ C.5.1 非破损检验的评定，应按下列规定进行；
 
 #### 拉结筋判定（GB 50203-2011）
 
-![image-20240401083238116](https://img.101jc.com/img/image-20240401083238116.png!yasuo70)
+![image-20240401083238116](https://img.101jc.com/img/image-20240401083238116.webp)
 
 ## 其他
 
@@ -157,4 +157,4 @@ C.5.1 非破损检验的评定，应按下列规定进行；
 
 以HRB400钢筋为例，下表列出了常见规格植筋的荷载检验值
 
-![image-20240401084504182](https://img.101jc.com/img/image-20240401084504182.png!yasuo70)
+![image-20240401084504182](https://img.101jc.com/img/image-20240401084504182.webp)
