--- a/source/_posts/模态参数.md
+++ b/source/_posts/模态参数.md
@@ -32,7 +32,7 @@ plugins:
 
 - 振型：结构上各点振幅值的连线，对于每个固有频率，结构都有且只有一个主振型
 
-  ![image-20240302210836652](https://img.101jc.com/img/image-20240302210836652.png!yasuo70)
+  ![image-20240302210836652](https://img.101jc.com/img/image-20240302210836652.webp)
 
 - 基频：指结构的第一阶固有频率
 
@@ -42,7 +42,7 @@ plugins:
 
 - 采样频率：指单位时间内采样的次数，比如设置采样频率为100Hz，则采样100次/s
 
-![image-20240302222921882](https://img.101jc.com/img/image-20240302222921882.png!yasuo70)
+![image-20240302222921882](https://img.101jc.com/img/image-20240302222921882.webp)
 
 -   带宽：FFT分析时，信号分析的最大频率范围称为带宽，其值=采样频率/频率比值，如图所示，采样频率为100，频率比值固定为2.56，则带宽=100/2.56=39.063Hz
 -   谱线：FFT分析得到的频谱曲线图事实上并不是连续的，而是由多个频率点相连绘制而成，每一个频率点则对应一条谱线，如图所示设置的谱线数为400，则意味着这个频谱曲线图是由400个离散的频率点相连绘制而成
@@ -50,87 +50,87 @@ plugins:
 -   重叠率：FFT分析只能对有限长度的时域信号进行变换，进行一次FFT分析所截取的时域信号长度，称为1帧，帧长度=1/频率分辨率，若重叠率设为50%，表示这一帧的信号将与下一帧的信号有50%是共用的，提高重叠率，可以增加平均次数，一般用于事后分析
 -   平均次数：指进行平均谱计算的次数，与采样时间、采样频率、谱线数、频率比值以及重叠率有关，当重叠率为0时，平均次数=（采样时间×采样频率）/（谱线数×频率比值），如下图所示，平均次数=（998.76×100）/（400×2.56）=97.5
 
-![image-20240303111005883](https://img.101jc.com/img/image-20240303111005883.png!yasuo70)
+![image-20240303111005883](https://img.101jc.com/img/image-20240303111005883.webp)
 
-![image-20240303111439294](https://img.101jc.com/img/image-20240303111439294.png!yasuo70)
+![image-20240303111439294](https://img.101jc.com/img/image-20240303111439294.webp)
 
 ## 荷载试验通用规定
 
 ### 一般规定{.col-span-3}
 
-![image-20240302171247067](https://img.101jc.com/img/image-20240302171247067.png!yasuo70)
+![image-20240302171247067](https://img.101jc.com/img/image-20240302171247067.webp)
 
 ### 试验设备{.row-span-1}
 
-![image-20240302171438578](https://img.101jc.com/img/image-20240302171438578.png!yasuo70)
+![image-20240302171438578](https://img.101jc.com/img/image-20240302171438578.webp)
 
 ### 测试要求{.col-span-2}
 
-![image-20240302175941487](https://img.101jc.com/img/image-20240302175941487.png!yasuo70)
+![image-20240302175941487](https://img.101jc.com/img/image-20240302175941487.webp)
 
-![image-20240302180028651](https://img.101jc.com/img/image-20240302180028651.png!yasuo70)
+![image-20240302180028651](https://img.101jc.com/img/image-20240302180028651.webp)
 
 ## 模态参数测试相关规定
 
 ### 测试内容{.row-span-2}
 
-![image-20240302175732667](https://img.101jc.com/img/image-20240302175732667.png!yasuo70)
+![image-20240302175732667](https://img.101jc.com/img/image-20240302175732667.webp)
 
-![image-20240302134534642](https://img.101jc.com/img/image-20240302134534642.png!yasuo70)
+![image-20240302134534642](https://img.101jc.com/img/image-20240302134534642.webp)
 
-![image-20240302184315272](https://img.101jc.com/img/image-20240302184315272.png!yasuo70)
+![image-20240302184315272](https://img.101jc.com/img/image-20240302184315272.webp)
 
 ###  测点布置{.row-span-2}
 
-![image-20240302183115324](https://img.101jc.com/img/image-20240302183115324.png!yasuo70)
+![image-20240302183115324](https://img.101jc.com/img/image-20240302183115324.webp)
 
-![image-20240302183827348](https://img.101jc.com/img/image-20240302183827348.png!yasuo70)
+![image-20240302183827348](https://img.101jc.com/img/image-20240302183827348.webp)
 
-![image-20240302183901206](https://img.101jc.com/img/image-20240302183901206.png!yasuo70)
+![image-20240302183901206](https://img.101jc.com/img/image-20240302183901206.webp)
 
-![image-20240302183940330](https://img.101jc.com/img/image-20240302183940330.png!yasuo70)
+![image-20240302183940330](https://img.101jc.com/img/image-20240302183940330.webp)
 
-![image-20240302183953968](https://img.101jc.com/img/image-20240302183953968.png!yasuo70)
+![image-20240302183953968](https://img.101jc.com/img/image-20240302183953968.webp)
 
 ### 激振方法
 
-![image-20240302183328461](https://img.101jc.com/img/image-20240302183328461.png!yasuo70)
+![image-20240302183328461](https://img.101jc.com/img/image-20240302183328461.webp)
 
-![image-20240302183514799](https://img.101jc.com/img/image-20240302183514799.png!yasuo70)
+![image-20240302183514799](https://img.101jc.com/img/image-20240302183514799.webp)
 
-![image-20240302183557966](https://img.101jc.com/img/image-20240302183557966.png!yasuo70)
+![image-20240302183557966](https://img.101jc.com/img/image-20240302183557966.webp)
 
 ### 过程控制
 
-![image-20240302185116178](https://img.101jc.com/img/image-20240302185116178.png!yasuo70)
+![image-20240302185116178](https://img.101jc.com/img/image-20240302185116178.webp)
 
 ### 数据采集
 
-![image-20240302185248820](https://img.101jc.com/img/image-20240302185248820.png!yasuo70)
+![image-20240302185248820](https://img.101jc.com/img/image-20240302185248820.webp)
 
 
 
 ### 数据分析{.row-span-2}
 
-![image-20240302185404793](https://img.101jc.com/img/image-20240302185404793.png!yasuo70)
+![image-20240302185404793](https://img.101jc.com/img/image-20240302185404793.webp)
 
-![image-20240302185416838](https://img.101jc.com/img/image-20240302185416838.png!yasuo70)
+![image-20240302185416838](https://img.101jc.com/img/image-20240302185416838.webp)
 
-![image-20240302185526844](https://img.101jc.com/img/image-20240302185526844.png!yasuo70)
+![image-20240302185526844](https://img.101jc.com/img/image-20240302185526844.webp)
 
-![image-20240302185727208](https://img.101jc.com/img/image-20240302185727208.png!yasuo70)
+![image-20240302185727208](https://img.101jc.com/img/image-20240302185727208.webp)
 
 ### 数据分析{.row-span-2}
 
-![image-20240302185934270](https://img.101jc.com/img/image-20240302185934270.png!yasuo70)
+![image-20240302185934270](https://img.101jc.com/img/image-20240302185934270.webp)
 
-![image-20240302190029129](https://img.101jc.com/img/image-20240302190029129.png!yasuo70)
+![image-20240302190029129](https://img.101jc.com/img/image-20240302190029129.webp)
 
-![image-20240302190129576](https://img.101jc.com/img/image-20240302190129576.png!yasuo70)
+![image-20240302190129576](https://img.101jc.com/img/image-20240302190129576.webp)
 
 ### 结果评价
 
-![image-20240302190255959](https://img.101jc.com/img/image-20240302190255959.png!yasuo70)
+![image-20240302190255959](https://img.101jc.com/img/image-20240302190255959.webp)
 
 ## Tips
 ### 参数设置{.col-span-2 .row-span-3}
