--- a/source/_posts/混凝土抗压强度.md
+++ b/source/_posts/混凝土抗压强度.md
@@ -146,19 +146,19 @@ plugins:
 
 4.1.6 当检测条件与本规程第6.2.1条和第6.2.2条的适用条件有较大差异时，可采用在构件上钻取的混凝土芯样或同条件试块对测区混凝土强度换算值进行修正。对同一强度等级混凝土修正时，芯样数量不应少于6个，公称直径宜为100mm，高径比应为1。芯样应在测区内钻取，每个芯样应只加工一个试件。同条件试块修正时，试块数量不应少于6个，试块边长应为150mm。计算时，测区混凝土强度修正量及测区混凝土强度换算值的修正应符合下列规定：
 
-![image-20240330165132463](https://img.101jc.com/img/image-20240330165132463.png!yasuo70)
+![image-20240330165132463](https://img.101jc.com/img/image-20240330165132463.webp)
 
-![image-20240330165207784](https://img.101jc.com/img/image-20240330165207784.png!yasuo70)
+![image-20240330165207784](https://img.101jc.com/img/image-20240330165207784.webp)
 
 ### 回弹值计算
 
-![image-20240330165802667](https://img.101jc.com/img/image-20240330165802667.png!yasuo70)
+![image-20240330165802667](https://img.101jc.com/img/image-20240330165802667.webp)
 
 ### 混凝土强度计算
 
-![image-20240330170134553](https://img.101jc.com/img/image-20240330170134553.png!yasuo70)
+![image-20240330170134553](https://img.101jc.com/img/image-20240330170134553.webp)
 
-![image-20240330170209619](https://img.101jc.com/img/image-20240330170209619.png!yasuo70)
+![image-20240330170209619](https://img.101jc.com/img/image-20240330170209619.webp)
 
 ## 超声回弹法T/CECS 02-2020
 
@@ -180,9 +180,9 @@ plugins:
 - 当同批构件按批进行一次或二次随机抽样检测时，随机抽样的最小样本容量宜符合表5.1.2的规定。
 {.marker-timeline}
 
-![image-20240330172011706](https://img.101jc.com/img/image-20240330172011706.png!yasuo70)
+![image-20240330172011706](https://img.101jc.com/img/image-20240330172011706.webp)
 
-![image-20240330172033112](https://img.101jc.com/img/image-20240330172033112.png!yasuo70)
+![image-20240330172033112](https://img.101jc.com/img/image-20240330172033112.webp)
 
 ### 测区布置{.row-span-1}
 
@@ -212,35 +212,35 @@ plugins:
 
 5.2.3 超声对测或角测时，回弹测试应在测区内超声波的发射面和接收面各测读5个回弹值。超声平测时，回弹测试应在测区内超声波的发射测点和接收测点之间测读10个回弹值。每一测点回弹值的测读应精确至1，且同一测点应只允许弹击1次。
 
-![image-20240330180048234](https://img.101jc.com/img/image-20240330180048234.png!yasuo70)
+![image-20240330180048234](https://img.101jc.com/img/image-20240330180048234.webp)
 
-![image-20240330180122955](https://img.101jc.com/img/image-20240330180122955.png!yasuo70)
+![image-20240330180122955](https://img.101jc.com/img/image-20240330180122955.webp)
 
 
 
 ### 声速计算{.row-span-2}
 
-![image-20240330202012151](https://img.101jc.com/img/image-20240330202012151.png!yasuo70)
+![image-20240330202012151](https://img.101jc.com/img/image-20240330202012151.webp)
 
-![image-20240330202052852](https://img.101jc.com/img/image-20240330202052852.png!yasuo70)
+![image-20240330202052852](https://img.101jc.com/img/image-20240330202052852.webp)
 
-![image-20240330202110152](https://img.101jc.com/img/image-20240330202110152.png!yasuo70)
+![image-20240330202110152](https://img.101jc.com/img/image-20240330202110152.webp)
 
 ### 混凝土强度计算{.row-span-2}
 
-![image-20240330183413623](https://img.101jc.com/img/image-20240330183413623.png!yasuo70)
+![image-20240330183413623](https://img.101jc.com/img/image-20240330183413623.webp)
 
-![image-20240330183505666](https://img.101jc.com/img/image-20240330183505666.png!yasuo70)
+![image-20240330183505666](https://img.101jc.com/img/image-20240330183505666.webp)
 
-![image-20240330183614919](https://img.101jc.com/img/image-20240330183614919.png!yasuo70)
+![image-20240330183614919](https://img.101jc.com/img/image-20240330183614919.webp)
 
-![image-20240330183728929](https://img.101jc.com/img/image-20240330183728929.png!yasuo70)
+![image-20240330183728929](https://img.101jc.com/img/image-20240330183728929.webp)
 
 ### 超声测试
 
-![image-20240330180310795](https://img.101jc.com/img/image-20240330180310795.png!yasuo70)
+![image-20240330180310795](https://img.101jc.com/img/image-20240330180310795.webp)
 
-![image-20240330180340951](https://img.101jc.com/img/image-20240330180340951.png!yasuo70)
+![image-20240330180340951](https://img.101jc.com/img/image-20240330180340951.webp)
 
 ## 钻芯法
 
@@ -305,7 +305,7 @@ plugins:
 
 6.2.2 芯样试件抗压试验的操作应符合现行国家标准《普通混凝土力学性能试验方法标准》GB/T50081中对立方体试件抗压试验的规定。
 
-![image-20240331092046696](https://img.101jc.com/img/image-20240331092046696.png!yasuo70)
+![image-20240331092046696](https://img.101jc.com/img/image-20240331092046696.webp)
 
 6.3.1 钻芯法确定检测批的混凝土抗压强度推定值时，取样应遵守下列规定：
 
@@ -314,9 +314,9 @@ plugins:
 
 {.marker-timeline}
 
-![image-20240331092220818](https://img.101jc.com/img/image-20240331092220818.png!yasuo70)
+![image-20240331092220818](https://img.101jc.com/img/image-20240331092220818.webp)
 
-![image-20240331092335742](https://img.101jc.com/img/image-20240331092335742.png!yasuo70)
+![image-20240331092335742](https://img.101jc.com/img/image-20240331092335742.webp)
 
 6.3.3 钻芯法确定检测批混凝土抗压强度推定值时，可剔除芯样试件抗压强度样本中的异常值。剔除规则应按现行国家标准《数据的统计处理和解释正态样本离群值的判断和处理》GB/T4883规定执行。当确有试验依据时，可对芯样试件抗压强度样本的标准差sc进行符合实际情况的修正或调整。
 
@@ -334,13 +334,13 @@ plugins:
 
 {.marker-timeline}
 
-![image-20240331092551341](https://img.101jc.com/img/image-20240331092551341.png!yasuo70)
+![image-20240331092551341](https://img.101jc.com/img/image-20240331092551341.webp)
 
 ## 混凝土结构现场检测技术标准GB/T 50784-2013
 
 ### 一般规定
 
-#### 《混凝土结构现场检测技术标准》![image-20240331101750276](https://img.101jc.com/img/image-20240331101750276.png!yasuo70)
+#### 《混凝土结构现场检测技术标准》![image-20240331101750276](https://img.101jc.com/img/image-20240331101750276.webp)
 
 4.2.6 批量检测混凝土抗压强度时，宜采取分层计量抽样方法。检验批受检构件数量可按下列方法确定：
 
@@ -362,9 +362,9 @@ plugins:
 
 {.marker-timeline}
 
-![image-20240331104832370](https://img.101jc.com/img/image-20240331104832370.png!yasuo70)
+![image-20240331104832370](https://img.101jc.com/img/image-20240331104832370.webp)
 
-![image-20240331104909738](https://img.101jc.com/img/image-20240331104909738.png!yasuo70)
+![image-20240331104909738](https://img.101jc.com/img/image-20240331104909738.webp)
 
 4.2.12 检验批混凝土抗压强度的推定应符合下列规定：
 
@@ -419,7 +419,7 @@ A.2.4 碳化深度值测量应符合下列规定：
 
 A.2.5 测区混凝土抗压强度换算值应根据现行行业标准《回弹法检测混凝土抗压强度技术规程》JGJ/T23的有关规定进行计算。
 
-![image-20240331105846140](https://img.101jc.com/img/image-20240331105846140.png!yasuo70)
+![image-20240331105846140](https://img.101jc.com/img/image-20240331105846140.webp)
 
 A.3.3 超声回弹综合法测区除应符合本标准第.A.2.2条的要求外，尚应符合下列规定：
 
@@ -440,7 +440,7 @@ A.3.5 测区声速测量应符合下列规定：
 
 {.marker-timeline}
 
-![image-20240331110223272](https://img.101jc.com/img/image-20240331110223272.png!yasuo70)
+![image-20240331110223272](https://img.101jc.com/img/image-20240331110223272.webp)
 
 A.3.7 单个构件混凝土抗压强度推定应符合本标准第A.2.6条的要求。
 
@@ -465,7 +465,7 @@ D.0.1 回弹构件的抽取应符合下列规定：
 
 {.marker-timeline}
 
-![image-20240331101152271](https://img.101jc.com/img/image-20240331101152271.png!yasuo70)
+![image-20240331101152271](https://img.101jc.com/img/image-20240331101152271.webp)
 
 ### JTG/T J21-2011
 
@@ -473,7 +473,7 @@ D.0.1 回弹构件的抽取应符合下列规定：
 
 5.3.2 对桥梁混凝土强度,应在主要构件或主要受力部位布置测区,采用回弹法、超声回弹综合法、取芯法等进行检测。
 
-![image-20240331103029765](https://img.101jc.com/img/image-20240331103029765.png!yasuo70)
+![image-20240331103029765](https://img.101jc.com/img/image-20240331103029765.webp)
 
 
 
@@ -499,10 +499,10 @@ D.0.1 回弹构件的抽取应符合下列规定：
 
 ### 角度修正
 
-![image-20240330184621231](https://img.101jc.com/img/image-20240330184621231.png!yasuo70)
+![image-20240330184621231](https://img.101jc.com/img/image-20240330184621231.webp)
 
-![image-20240330184640821](https://img.101jc.com/img/image-20240330184640821.png!yasuo70)
+![image-20240330184640821](https://img.101jc.com/img/image-20240330184640821.webp)
 
 ### 浇筑面修正
 
-![image-20240330184846918](https://img.101jc.com/img/image-20240330184846918.png!yasuo70)
+![image-20240330184846918](https://img.101jc.com/img/image-20240330184846918.webp)
