--- a/source/_posts/粘结强度.md
+++ b/source/_posts/粘结强度.md
@@ -76,13 +76,13 @@ U.4.1 试件制备应符合下列要求：
 
 ### 试验步骤{.row-span-1}
 
-![image-20240401135800651](https://img.101jc.com/img/image-20240401135800651.png!yasuo70)
+![image-20240401135800651](https://img.101jc.com/img/image-20240401135800651.webp)
 
 U.5.2 以均匀速率连续加荷，控制在1min～1.5min内破坏;记录破坏时的荷载值，并观测其破坏形式。
 
 ### 试验结果
 
-![image-20240401135948658](https://img.101jc.com/img/image-20240401135948658.png!yasuo70)
+![image-20240401135948658](https://img.101jc.com/img/image-20240401135948658.webp)
 
 U.6.2 破坏形式及其正常性判别
 
