--- a/source/_posts/索力测试.md
+++ b/source/_posts/索力测试.md
@@ -33,7 +33,7 @@ plugins:
 - 频域：对时域曲线进行FFT变换，得到的结果是幅值随频率变化的曲线，也就是频域
 - 采样频率：指单位时间内采样的次数，比如设置采样频率为100Hz，则采样100次/s
 
-![image-20240302222921882](https://img.101jc.com/img/image-20240302222921882.png!yasuo70)
+![image-20240302222921882](https://img.101jc.com/img/image-20240302222921882.webp)
 
 - 带宽：FFT分析时，信号分析的最大频率范围称为带宽，其值=采样频率/频率比值，如图所示，采样频率为100，频率比值固定为2.56，则带宽=100/2.56=39.063Hz
 - 谱线：FFT分析得到的频谱曲线图事实上并不是连续的，而是由多个频率点相连绘制而成，每一个频率点则对应一条谱线，如图所示设置的谱线数为400，则意味着这个频谱曲线图是由400个离散的频率点相连绘制而成
@@ -41,37 +41,37 @@ plugins:
 - 重叠率：FFT分析只能对有限长度的时域信号进行变换，进行一次FFT分析所截取的时域信号长度，称为1帧，帧长度=1/频率分辨率，若重叠率设为50%，表示这一帧的信号将与下一帧的信号有50%是共用的，提高重叠率，可以增加平均次数，一般用于事后分析
 - 平均次数：指进行平均谱计算的次数，与采样时间、采样频率、谱线数、频率比值以及重叠率有关，当重叠率为0时，平均次数=（采样时间×采样频率）/（谱线数×频率比值），如下图所示，平均次数=（998.76×100）/（400×2.56）=97.5
 
-![image-20240303111005883](https://img.101jc.com/img/image-20240303111005883.png!yasuo70)
+![image-20240303111005883](https://img.101jc.com/img/image-20240303111005883.webp)
 
-![image-20240303111439294](https://img.101jc.com/img/image-20240303111439294.png!yasuo70)
+![image-20240303111439294](https://img.101jc.com/img/image-20240303111439294.webp)
 
 ## 荷载试验通用规定
 
 ### 一般规定{.col-span-3}
 
-![image-20240302171247067](https://img.101jc.com/img/image-20240302171247067.png!yasuo70)
+![image-20240302171247067](https://img.101jc.com/img/image-20240302171247067.webp)
 
 ### 试验设备{.row-span-1}
 
-![image-20240302171438578](https://img.101jc.com/img/image-20240302171438578.png!yasuo70)
+![image-20240302171438578](https://img.101jc.com/img/image-20240302171438578.webp)
 
 ### 测试要求{.col-span-2}
 
-![image-20240302175941487](https://img.101jc.com/img/image-20240302175941487.png!yasuo70)
+![image-20240302175941487](https://img.101jc.com/img/image-20240302175941487.webp)
 
-![image-20240302180028651](https://img.101jc.com/img/image-20240302180028651.png!yasuo70)
+![image-20240302180028651](https://img.101jc.com/img/image-20240302180028651.webp)
 
 ## 索力测试相关规定
 
 ### 一般规定{.row-span-2}
 
-![image-20240314211100777](https://img.101jc.com/img/image-20240314211100777.png!yasuo70)
+![image-20240314211100777](https://img.101jc.com/img/image-20240314211100777.webp)
 
 ### 一般规定{.row-span-2}
 
-![image-20240314211309783](https://img.101jc.com/img/image-20240314211309783.png!yasuo70)
+![image-20240314211309783](https://img.101jc.com/img/image-20240314211309783.webp)
 
-![image-20240314211525786](https://img.101jc.com/img/image-20240314211525786.png!yasuo70)
+![image-20240314211525786](https://img.101jc.com/img/image-20240314211525786.webp)
 
 
 
