--- a/source/_posts/锚栓拉拔.md
+++ b/source/_posts/锚栓拉拔.md
@@ -82,7 +82,7 @@ C.2.3 现场非破损检验的抽样数量，应符合下列规定：
 
   1）对重要结构构件及生命线工程的非结构构件，应按表C.2.3规定的抽样数量对该检验批的锚栓进行检验；
 
-  ![image-20240401080213285](https://img.101jc.com/img/image-20240401080213285.png!yasuo70)
+  ![image-20240401080213285](https://img.101jc.com/img/image-20240401080213285.webp)
 
   2）对一般结构构件，应取重要结构构件抽样量的50%且不少于5件进行检验；
 
@@ -137,9 +137,9 @@ C.5.1 非破损检验的评定，应按下列规定进行；
 
 C.5.2 锚栓破坏性检验发生混凝土破坏，检验结果满足下列要求时，其锚固质量应评定为合格：
 
-![image-20240128111602365](https://img.101jc.com/img/image-20240128111602365.png!yasuo70)
+![image-20240128111602365](https://img.101jc.com/img/image-20240128111602365.webp)
 
-![image-20240127160501522](https://img.101jc.com/img/image-20240127160501522.png!yasuo70)
+![image-20240127160501522](https://img.101jc.com/img/image-20240127160501522.webp)
 
-![image-20240127160522887](https://img.101jc.com/img/image-20240127160522887.png!yasuo70)
+![image-20240127160522887](https://img.101jc.com/img/image-20240127160522887.webp)
 
